test/files/neg/t6323a.check
t6323a.scala:11: error: No TypeTag available for Test
      val value = u.typeOf[Test]
                          ^
1 error
